remove long ago completed items in win32
 SVN 6596@trunk

--- a/docs/TODO
+++ b/docs/TODO
@@ -272,33 +272,13 @@ Contents:
 1.5 win32 interface
 
   General
-    State: Some examples already work, IDE does not work. Most things
+    State: Most examples already work, IDE works fairly well. Most things
            implemented. Needs debugging
     Skills: Knowledge of LCL, win32 api
     Difficulty: medium
 
-  Menus
-    State: needs testing and proper implementation of menu item ids.
-    Skills: win32
-    Difficulty: medium
-    
-  Form Sizes
-    State: form sizes are not honoured, they are often way too big.
-    Skills: win32
-    Difficulty: medium
-
   TPromptDialog:
    State: in these dialogs there is no text.
-   Skills: win32
-   Difficulty: medium
-
-  TBitBtn
-   State: no text
-   Skills: win32
-   Difficulty: medium
-
-  TTimers:
-   State: crash the application internally...application hangs.
    Skills: win32
    Difficulty: medium
 
