updated finnish translation  from Seppo
 SVN 6709@trunk

--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -40,7 +40,7 @@ msgstr ""
 
 #: lazarusidestrconsts:liscompiling
 msgid "%s (compiling ...)"
-msgstr ""
+msgstr "%s (käännetään ...)"
 
 #: lazarusidestrconsts:lisdebugging
 msgid "%s (debugging ...)"
@@ -144,7 +144,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lispkgmangthefollowingunitswillbeaddedtotheusessectionof
 msgid "%sThe following units will be added to the uses section of%s%s:%s%s%s"
-msgstr ""
+msgstr "%sSeuraavat käännösyksiköt (units) lisätään %s%s%-tiedoston uses-lauseeseen :%s%s%s"
 
 #: lazarusidestrconsts:lisoipthispackageisinstalledbutthelpkfilewasnotfound
 msgid "%sThis package is installed, but the lpk file was not found"
@@ -338,6 +338,10 @@ msgstr ""
 msgid "Add editor file to Project"
 msgstr "Lisää editorin tiedosto projektiin"
 
+#: lazarusidestrconsts:lisprojaddeditorfile
+msgid "Add editor files"
+msgstr ""
+
 #: lazarusidestrconsts:lisaf2paddfiletoapackage
 msgid "Add file to a package"
 msgstr ""
@@ -345,6 +349,10 @@ msgstr ""
 #: lazarusidestrconsts:lisprojaddaddfiletoproject
 msgid "Add file to project:"
 msgstr "Lisää tiedosto projektiin:"
+
+#: lazarusidestrconsts:lisprojaddfiles
+msgid "Add files"
+msgstr ""
 
 #: lazarusidestrconsts:lisa2paddfilestopackage
 msgid "Add files to package"
@@ -890,8 +898,12 @@ msgstr ""
 msgid "Checks:"
 msgstr ""
 
+#: lazarusidestrconsts:lischoosedelphiproject
+msgid "Choose Delphi project (*.dpr)"
+msgstr ""
+
 #: lazarusidestrconsts:lischoosedelphiunit
-msgid "Choose Delphi unit"
+msgid "Choose Delphi unit (*.pas)"
 msgstr ""
 
 #: lazarusidestrconsts:lisctdefchoosedirectory
@@ -1260,7 +1272,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisconfirmchanges
 msgid "Confirm changes"
-msgstr ""
+msgstr "Vahvista seuraavat muutokset"
 
 #: lazarusidestrconsts:lisprojinspconfirmdeletingdependency
 msgid "Confirm deleting dependency"
@@ -2252,7 +2264,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisfileisnotwritable
 msgid "File is not writable"
-msgstr ""
+msgstr "Tiedoston tallentaminen ei onnistunut"
 
 #: lazarusidestrconsts:uefilerocap
 msgid "File is readonly"
@@ -2832,7 +2844,7 @@ msgstr "Jätä huomiotta erilaiset rivinloppumerkinnät (esim. #10 = #13#10)"
 
 #: lazarusidestrconsts:lisdiskdiffignorediskchanges
 msgid "Ignore disk changes"
-msgstr ""
+msgstr "Jätä huomiotta tallennetun version muutokset"
 
 #: lazarusidestrconsts:lisdiffdlgignoreifemptylineswereadd
 msgid "Ignore if empty lines were added or removed"
@@ -4836,7 +4848,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisdiskdiffrevertall
 msgid "Reload from disk"
-msgstr ""
+msgstr "Hae tallennettuna oleva versio"
 
 #: lazarusidestrconsts:lisexttoolremove
 msgid "Remove"
@@ -4860,7 +4872,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lispckeditremovefile
 msgid "Remove file"
-msgstr ""
+msgstr "Poista tiedosto"
 
 #: lazarusidestrconsts:lisprojinspremovefilefromproject
 msgid "Remove file %s from project?"
@@ -5328,7 +5340,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisselectdfmfiles
 msgid "Select Delphi form files (*.dfm)"
-msgstr ""
+msgstr "Valitse Delphi form (lomake) tiedosto (*.dfm)"
 
 #: lazarusidestrconsts:srkmecseldown
 msgid "Select Down"
@@ -5514,33 +5526,9 @@ msgstr ""
 msgid "Show CodeTools Values"
 msgstr ""
 
-#: lazarusidestrconsts:dlgshowcompiledprocedures
-msgid "Show Compiled Procedures"
-msgstr ""
-
-#: lazarusidestrconsts:dlgshowconditionals
-msgid "Show Conditionals"
-msgstr ""
-
-#: lazarusidestrconsts:dlgshowdebuginfo
-msgid "Show Debug Info"
-msgstr ""
-
-#: lazarusidestrconsts:dlgshowdefinedmacros
-msgid "Show Defined Macros"
-msgstr ""
-
 #: lazarusidestrconsts:dlgcoshowerr
 msgid "Show Errors"
 msgstr "Näytä virheet"
-
-#: lazarusidestrconsts:dlgshoweverything
-msgid "Show Everything"
-msgstr "Näytä kaikki"
-
-#: lazarusidestrconsts:dlgshowgeneralinfo
-msgid "Show General Info"
-msgstr ""
 
 #: lazarusidestrconsts:dlgguidelines
 msgid "Show Guide Lines"
@@ -5558,10 +5546,6 @@ msgstr ""
 msgid "Show Notes"
 msgstr "Näytä muistutukset"
 
-#: lazarusidestrconsts:dlgshownothing
-msgid "Show Nothing (only errors)"
-msgstr ""
-
 #: lazarusidestrconsts:dlgcoshowoptions
 msgid "Show Options"
 msgstr ""
@@ -5569,14 +5553,6 @@ msgstr ""
 #: lazarusidestrconsts:fdmshowoptions
 msgid "Show Options for form editing"
 msgstr "Näytä lomake editorin asetukset"
-
-#: lazarusidestrconsts:dlgshowtriedfiles
-msgid "Show Tried Files"
-msgstr ""
-
-#: lazarusidestrconsts:dlgshowusedfiles
-msgid "Show Used Files"
-msgstr ""
 
 #: lazarusidestrconsts:dlgshowwarnings
 msgid "Show Warnings"
@@ -5598,6 +5574,10 @@ msgstr ""
 msgid "Show close buttons in notebook"
 msgstr ""
 
+#: lazarusidestrconsts:dlgshowcompiledprocedures
+msgid "Show compiled procedures"
+msgstr ""
+
 #: lazarusidestrconsts:dlgshowcompileroptions
 msgid "Show compiler options"
 msgstr ""
@@ -5606,8 +5586,28 @@ msgstr ""
 msgid "Show component captions"
 msgstr ""
 
+#: lazarusidestrconsts:dlgshowconditionals
+msgid "Show conditionals"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowdebuginfo
+msgid "Show debug info"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowdefinedmacros
+msgid "Show defined macros"
+msgstr ""
+
 #: lazarusidestrconsts:dlgshowedrhints
 msgid "Show editor hints"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshoweverything
+msgid "Show everything"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowgeneralinfo
+msgid "Show general info"
 msgstr ""
 
 #: lazarusidestrconsts:dlgqshowgrid
@@ -5622,8 +5622,24 @@ msgstr ""
 msgid "Show line numbers"
 msgstr "Näytä rivinumerot"
 
+#: lazarusidestrconsts:dlgshownothing
+msgid "Show nothing (only errors)"
+msgstr ""
+
 #: lazarusidestrconsts:dlgshowscrollhint
 msgid "Show scroll hint"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowsummary
+msgid "Show summary"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowtriedfiles
+msgid "Show tried files"
+msgstr ""
+
+#: lazarusidestrconsts:dlgshowusedfiles
+msgid "Show used files"
 msgstr ""
 
 #: lazarusidestrconsts:liscldirsimplesyntaxeginsteadof
@@ -6644,15 +6660,15 @@ msgstr ""
 
 #: lazarusidestrconsts:lisunabletocopyfile
 msgid "Unable to copy file"
-msgstr ""
+msgstr "Tiedoston kopiointi ei onnistunut"
 
 #: lazarusidestrconsts:lisunabletocopyfileto
 msgid "Unable to copy file %s%s%s%sto %s%s%s"
-msgstr ""
+msgstr "Tiedoston %s%s%s%skopiointi ei onnistunut tiedostoksi %s%s%s"
 
 #: lazarusidestrconsts:lisunabletocopyfileto2
 msgid "Unable to copy file %s%s%s%sto %s%s%s."
-msgstr ""
+msgstr "Tiedoston %s%s%s%skopiointi ei onnistunut tiedostoksi %s%s%s."
 
 #: lazarusidestrconsts:lisunabletocreatebackupdirectory
 msgid "Unable to create backup directory %s%s%s."
@@ -6852,7 +6868,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisunabletowritefile2
 msgid "Unable to write file %s%s%s"
-msgstr ""
+msgstr "Tallentaminen tiedostoon %s%s%s ei onnistunut"
 
 #: lazarusidestrconsts:lisunabletowritefileerror
 msgid "Unable to write file %s%s%s%sError: %s"
@@ -6860,7 +6876,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisunabletowritefilename
 msgid "Unable to write file %s%s%s."
-msgstr ""
+msgstr "Tallentaminen tiedostoon %s%s%s ei onnistunut."
 
 #: lazarusidestrconsts:lispkgmangunabletowritepackagetofileerror
 msgid "Unable to write package %s%s%s%sto file %s%s%s.%sError: %s"
@@ -6872,7 +6888,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisunabletowritetofile2
 msgid "Unable to write to file %s%s%s"
-msgstr ""
+msgstr "Tallentaminen tiedostoon %s%s%s ei onnistunut"
 
 #: lazarusidestrconsts:lisunabletowritetofile
 msgid "Unable to write to file %s%s%s!"
@@ -7368,10 +7384,10 @@ msgstr ""
 
 #: lazarusidestrconsts:liswriteerror
 msgid "Write Error"
-msgstr ""
+msgstr "Tiedoston tallentaminen ei onnistunut"
 
 #: lazarusidestrconsts:dlgwritefpclogo
-msgid "Write an FPC Logo"
+msgid "Write an FPC logo"
 msgstr ""
 
 #: lazarusidestrconsts:liscodetoolsdefswriteerror
