updated finnish translation for windows codepage  from Seppo
 SVN 6822@trunk

--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -2440,7 +2440,7 @@ msgstr "suomi"
 
 #: lazarusidestrconsts:rslanguagefinnishwin
 msgid "Finnish for MS Windows"
-msgstr ""
+msgstr "suomi MS Windows-merkistölle"
 
 #: lazarusidestrconsts:lisfixlfmfile
 msgid "Fix LFM file"
